2007-10-29  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-script.c: Add the :filename and :filename-set
	properties, to retrieve the path of the currently parsed file (if
	:filename-set is TRUE) from the ClutterScriptable implementations.

2007-10-28  Matthew Allum  <mallum@openedhand.com>

	* clutter/clutter-effect.c:
	Small doc fix (#584)

2007-10-27  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/json/json-parser.c:
	(json_scanner_msg_handler): Set the GError to be returned by
	the parsing functions into the GScanner error message handler.

	(json_parser_object): Return the symbol token in case we have
	a parse error after the member name.

	(json_parser_load_from_data): Propagate the error set in the
	message handler, if any.

	* clutter/json/json-node.c (json_node_free): Unref the objects
	only if are set, to avoid a couple of needless criticals we
	get on error.

	* tests/test-script.json: More properties.

2007-10-27  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-script.[ch]: Slight API change in the
	clutter_script_get_objects() function: now it takes
	object name/object return location pairs and returns the
	number of objects found and returned.

	* tests/test-script.c: Exercise the clutter_script_get_objects()
	function.

2007-10-27  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-rectangle.c (clutter_rectangle_paint): Use
	CGL_ENABLE_BLEND flag instead of CGL_BLEND value. (#580,
	Gwenole Beauchesne)

2007-10-27  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-color.c (clutter_color_to_string): Update the
	documentation for the format of the returned string, and remove
	the note: now clutter_color_parse() can parse the string this
	function returns.

2007-10-27  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/pango/pangoclutter-render.c: Last usage of guint
	replaced with COGLuint. (Tommi Komulainen)

2007-10-26  Matthew Allum  <mallum@openedhand.com>

	* clutter/clutter-texture.c: